# tsm

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
nix/: ci.nix  overlay.nix  package.nix  shell.nix  systems.nix
src/: app.rs  args.rs  lib.rs  main.rs  tmux.rs
src/config/: args.rs  mod.rs  theme.rs
src/tmux/: client.rs  fieldset.rs  layout.rs  mod.rs  session.rs  window.rs
src/tui/: app.rs  event.rs  helpers.rs  layout.rs  mod.rs  state.rs
src/tui/components/: input.rs  keybinds.rs  layout_preview.rs  mod.rs  modal.rs  session_details.rs  session_list.rs
src/tui/state/: input.rs  mod.rs  mode.rs  sessions.rs
src/tui/ui/: mod.rs  spinner.rs
src/tui/ui/components/: keybinds.rs  mod.rs  modal.rs  session_details.rs  session_list.rs
src/tui/ui/views/: mod.rs  session_list.rs
