[package]
name = "tsm"
version = "0.1.0"
edition = "2024"

[features]
debug = []

[dependencies]
anyhow = "1.0.100"
catppuccin = { features = ["ratatui"], git = "https://github.com/catppuccin/rust" } # FIXME: after 0.2.7 lands
chrono = "0.4.42"
chrono-humanize = "0.2.3"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
ratatui = "0.30.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
claim = "0.5.0"
